Fix iOS layout problems

--- a/src/Bird/Bird.module.css
+++ b/src/Bird/Bird.module.css
@@ -71,12 +71,6 @@
 }
 
 .modal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
   background: var(--color-white);
   color: darkslategray;
   padding: 20px;
