--- a/src/Map/Map.module.css
+++ b/src/Map/Map.module.css
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.large {
+  height: 400px;
+}
+
 .roundIcon {
   border-radius: 100px;
   border: 5px solid var(--color-white);
