--- a/src/TopBar/TopBar.module.css
+++ b/src/TopBar/TopBar.module.css
@@ -1,5 +1,4 @@
 .topBar {
-  position: fixed;
   height: 55px;
   width: 100%;
   bottom: 0;
@@ -8,6 +7,7 @@
   grid-template-columns: 1fr min-content;
   border-bottom: 1px solid var(--color-blue-medium);
   font-size: 20px;
+  margin-top: auto;
 }
 
 .content {
